fixed label visibility while keeping overflow:auto on scroll-to-able locations, many more jump/scroll fixes

--- a/src/css/legislation_fixes.scss
+++ b/src/css/legislation_fixes.scss
@@ -48,8 +48,12 @@
     cursor:pointer;
 }
 .legislation {
-    *[data-hook], *[data-location]{
+    // fixed margin collapse, for height calculations
+    *[data-location]{
         overflow:auto;
+    }
+    .prov *{
+        overflow:visible;
     }
 }
 /*
